correct flip cards and button on mobile

--- a/src/css/resources.css
+++ b/src/css/resources.css
@@ -137,6 +137,13 @@
     transform: rotateY(180deg);
 }
 
+@media (max-width: 576px) {
+    .flip-card-container:hover .flip-card,
+    .flip-card-container:focus-within .flip-card {
+        transform: rotateY(0deg);
+    }
+}
+
 
 /* .card-... */
 
@@ -228,20 +235,6 @@
 
 /* .img-bg */
 
-.card-front .img-bg::before {
-    content: "";
-    position: absolute;
-    top: 34%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(18deg);
-    width: 100%;
-    height: 6px;
-    border: 1px solid var(--primary);
-    border-left-color: transparent;
-    border-right-color: transparent;
-    transition: .1s;
-}
-
 
 /* hover state */
 
@@ -301,7 +294,6 @@
 
 /* button */
 
-.card-front button,
 .card-back button {
     font-family: inherit;
     font-weight: bold;
@@ -315,13 +307,33 @@
     cursor: pointer;
 }
 
+.card-front button {
+    font-family: inherit;
+    font-weight: bold;
+    color: rgb(253, 253, 253);
+    letter-spacing: 2px;
+    padding: 9px 20px;
+    border: 1px solid rgb(240, 240, 240);
+    border-radius: 1000px;
+    background: rgb(101, 101, 101, 0.7);
+    transition: .3s;
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 576px) {
+    .card-front button {
+        display: flex;
+    }
+}
+
 .card-front button:hover,
 .card-front button:focus,
 .card-back button:hover,
 .card-back button:focus {
-    color: rgb(233, 233, 233);
-    background: rgba(101, 101, 101, 0.7);
-    border: 1px solid rgb(233, 233, 233);
+    color: rgb(253, 253, 253);
+    background: rgb(101, 101, 101, 0.7);
+    border: 1px solid rgb(240, 240, 240);
 }
 
 .card-front button:active,
